# libqi-capi

./: CMakeLists.txt  qiproject.xml
qic/: api.h  session.h  signature.h  type.h  value.h
src/: session.cpp  signature.cpp  type.cpp  value.cpp
test/: test_c_values.cpp
